rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__db_time_series__db_ts_multiple_rolling.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/db_time_series.rs
expression: result
---
orders__created_at_day | orders__rolling_sum_trailing_7d | orders__rolling_count_7d
-----------------------+---------------------------------+-------------------------
2024-01-10 00:00:00    | 305.00                          | 3                       
2024-01-11 00:00:00    | 230.00                          | 2                       
2024-01-12 00:00:00    | 580.00                          | 3                       
2024-01-13 00:00:00    | 580.00                          | 3                       
2024-01-14 00:00:00    | 670.00                          | 4                       
2024-01-15 00:00:00    | 530.00                          | 4                       
2024-01-16 00:00:00    | 650.00                          | 5                       
2024-01-17 00:00:00    | 620.00                          | 4                       
2024-01-18 00:00:00    | 800.00                          | 5                       
2024-01-19 00:00:00    | 450.00                          | 4                       
2024-01-20 00:00:00    | 450.00                          | 4
