rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__db_time_series__db_ts_rolling_with_dimension.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/db_time_series.rs
assertion_line: 101
expression: result
---
orders__category | orders__created_at_day | orders__rolling_sum_trailing_7d
-----------------+------------------------+--------------------------------
books            | 2024-01-10 00:00:00    | 30.00                          
books            | 2024-01-11 00:00:00    | 30.00                          
books            | 2024-01-12 00:00:00    | 30.00                          
books            | 2024-01-13 00:00:00    | 30.00                          
books            | 2024-01-14 00:00:00    | 30.00                          
books            | 2024-01-15 00:00:00    | 90.00                          
books            | 2024-01-16 00:00:00    | 90.00                          
books            | 2024-01-17 00:00:00    | 60.00                          
books            | 2024-01-18 00:00:00    | 60.00                          
books            | 2024-01-19 00:00:00    | 60.00                          
books            | 2024-01-20 00:00:00    | 60.00                          
clothing         | 2024-01-10 00:00:00    | 75.00                          
clothing         | 2024-01-14 00:00:00    | 90.00                          
clothing         | 2024-01-15 00:00:00    | 90.00                          
clothing         | 2024-01-16 00:00:00    | 90.00                          
clothing         | 2024-01-17 00:00:00    | 90.00                          
clothing         | 2024-01-18 00:00:00    | 270.00                         
clothing         | 2024-01-19 00:00:00    | 270.00                         
clothing         | 2024-01-20 00:00:00    | 270.00                         
electronics      | 2024-01-10 00:00:00    | 200.00                         
electronics      | 2024-01-11 00:00:00    | 200.00                         
electronics      | 2024-01-12 00:00:00    | 550.00                         
electronics      | 2024-01-13 00:00:00    | 550.00                         
electronics      | 2024-01-14 00:00:00    | 550.00                         
electronics      | 2024-01-15 00:00:00    | 350.00                         
electronics      | 2024-01-16 00:00:00    | 470.00                         
electronics      | 2024-01-17 00:00:00    | 470.00                         
electronics      | 2024-01-18 00:00:00    | 470.00                         
electronics      | 2024-01-19 00:00:00    | 120.00                         
electronics      | 2024-01-20 00:00:00    | 120.00
