rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__db_time_series__db_ts_running_total.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/db_time_series.rs
expression: result
---
orders__created_at_day | orders__running_total
-----------------------+----------------------
2024-01-10 00:00:00    | 30.00                
2024-01-11 00:00:00    | 30.00                
2024-01-12 00:00:00    | 380.00               
2024-01-13 00:00:00    | 380.00               
2024-01-14 00:00:00    | 470.00               
2024-01-15 00:00:00    | 530.00               
2024-01-16 00:00:00    | 650.00               
2024-01-17 00:00:00    | 650.00               
2024-01-18 00:00:00    | 830.00               
2024-01-19 00:00:00    | 830.00               
2024-01-20 00:00:00    | 830.00
